Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,7 +11,7 @@
 #wall .parent #tag-4{
   display: none;
 }
-#wall .parent > #tag-5{
+#wall .parent  #tag-5{
   display: none;
 }
 #wall .parent > #tag-6{
