--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,7 +14,7 @@
 #wall .parent  #tag-5{
   display: none;
 }
-#wall .parent + #tag-6{
+#wall .parent > #tag-6{
   display: none;
 }
 #wall .parent > div + #tag-7{
