--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,9 +14,9 @@
 #wall .parent  #tag-5{
   display: none;
 }
-#wall .parent#div > #tag-6{
+#wall .parent div > #tag-6{
   display: none;
 }
-#wall .parent > div + #tag-7{
+#wall .parent  div + #tag-7{
   display: none;
 }
